# seichi-portal-backend

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.yaml  docker-compose.yml  renovate.json  rust-toolchain.toml  schemathesis.toml
server/: .env.example  AGENTS.md  Cargo.toml  Makefile.common.toml  Makefile.toml
server/.sqlx/: query-0b1582fa9cdb494cfd97c750fabcb189b6da2f8adbae355958dac422eb13c061.json  query-160286bbed082be2b3bf152be15ba2654c59247fc04befd49a9dfac7e9fdad59.json  query-2486ec39436a95c36223873081660e7002aa4555ccdba2b4f13b546e982d8b5d.json  query-2d70760d82594eeddbb86a0c92f64a640d01047afc12352e5de2f0bc7c45e3ac.json  query-321462c2290cb9cfc849346d257bc1b2435c69d7e967a9d4209b86f0a8e0866d.json  query-42082bf024bc86aff3a805aaddf1f5dcaeadaf7fc2fc659db82dee60d1eb86e8.json  query-4e5d88b0e5f4f17904aa0982d628516d179e1b4399f28867105ac4a0df3ac0e3.json  query-505b5423e359661bf602fce16f51df2cbd896a891aa93c8cca22a51378db47ea.json  query-56f29d67b203f9c1a9e4b7d8896389d101d139cca09c77fb06dcf78011cab6c1.json  query-65f2f30d60a84b759dec85d5639fa258391382fe1f3705a9c652f74c615bcff4.json  query-6ac654e6bddfa24c74bde58b512a2c7f0bb788f337141376571dd93cc2c653df.json  query-7010422134954f5766bb078c8bb450bb90e9a463d48dfb5ab15ee9c524b72c92.json  query-7ad240fbe6e92c38ab263f487c882b4bb6f2432048f3cd05f3071c73641a6b6d.json  query-82421e55a0f9a1a4b3bafd49392970da5892a7efa06e14aa5cc6a6eb04e9758f.json  query-9be430b8f989ac720f0fa12772fca1c1fa6a935c621653d20abb5d93febe5da9.json  query-a44e8859dc0cd1a0b7830c6244759981c5672fd78d16f6840197eb842b2d3c88.json  query-a496aba50cba51370c7c0afcedd07bce1b37ee4dbd9dbeac11dcb4bb563d126e.json  query-a95316331a3d3398360a93e4510bec5a9e85b0b9053b9fd61a498231396fdc1d.json  query-aa199982a9b8e8d1d5d0acd1ed35fc5c15162c83e2fede3ab40c810742e49a12.json  query-ab3db15d00722bef1cb8bcb40d08f48f633e0bfee9490eeb00ef51a477c3565b.json  query-b268e0b0894878830caef23bef8f6c63eb71614047477221d0e758c9842713c5.json  query-bbeeee37cc2bb5ad5cd3be3a101fcb8994f95897358fa516cc749207edbeb8e6.json  query-c31ce95219b1b5a3ee38340b68be5bddbd88b7384cf24d561cb360d0aa60f432.json  query-ca4d70f5215d92eabbc3407b970a26e3a897c592f68c6444b3a61a500d0c4a12.json  query-ca709cbaf13622f7e21c356f52024d8b988b954848cbe10df60c8e2e2cf951ea.json  query-d8fb709be44782d6a19bae5babf3df017dca7d5d24498814de3afc806f6ecdb1.json  query-ee73dc2e7aa483f98be913b7d74710917afd20158129773b58946ff176fd1711.json  query-fefa920611a0cbd428204484ea1ad38bb919556d6e69f5e28d9b2d396cc2ef9c.json
server/app/: Cargo.toml
server/app/src/: main.rs
server/common/: Cargo.toml
server/common/src/: config.rs  lib.rs  retry.rs  test_utils.rs
server/database/: Cargo.toml  Makefile.toml
server/database/src/: config.rs  connection.rs  lib.rs
server/database/src/entities/: answer_types.rs  form_choices.rs  form_questions.rs  mod.rs  prelude.rs
server/domain/: Cargo.toml  Makefile.toml
server/domain-derive/: Cargo.toml
server/domain-derive/src/: lib.rs
server/domain/src/: auth.rs  form.rs  global_discord_webhook.rs  lib.rs  notification.rs  pagination.rs  repository.rs  types.rs
server/domain/src/account/: models.rs
server/domain/src/form/: answer.rs  comment.rs  label.rs  message.rs  message_thread.rs  models.rs  question.rs  service.rs  settings.rs
server/domain/src/message/: models.rs
server/domain/src/notification/: models.rs  (+4 more)
server/entity/: Cargo.toml
server/entrypoint/: Cargo.toml
server/entrypoint/src/: config.rs  main.rs  openapi.rs
server/errors/: Cargo.toml
server/errors/src/: anywhere.rs  domain.rs  error_definitions.rs  infra.rs  lib.rs  presentation.rs  usecase.rs  validation.rs
server/form/: Cargo.toml
server/form/src/: domain.rs  handlers.rs
server/infra/entities/: Cargo.toml  Makefile.toml  mod.rs
server/infra/outgoing/: Cargo.toml
server/infra/resource/: Cargo.toml
server/migration/: Cargo.toml  README.md
server/migration/migrations/: 20220101000001_create_table.down.sql  20220101000001_create_table.up.sql  20260526000001_add_answer_entry_set.down.sql  20260526000001_add_answer_entry_set.up.sql  20260527000001_add_message_threads.down.sql  20260527000001_add_message_threads.up.sql  20260626000001_create_answer_submission_restrictions.down.sql  20260626000001_create_answer_submission_restrictions.up.sql  20260626000001_rename_answer_submitter_restrictions.down.sql  20260626000001_rename_answer_submitter_restrictions.up.sql  20260722000000_create_global_discord_webhook_settings.down.sql  20260722000000_create_global_discord_webhook_settings.up.sql
server/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20221127_173808_create_form_answer_type_table.rs  m20221127_173808_create_form_question_type_enum_table.rs  m20221127_173808_form_questions.rs  m20221211_211233_create_form_answer_type_table.rs  m20221211_211233_form_questions.rs  m20230219_143118_create_form_choices.rs  m20230312_132648_question_type_seeding.rs  m20230614_083950_crate_form_response_period_table.rs  m20230622_053919_create_form_webhook.rs  m20230811_062425_create_answer_tables.rs  m20230908_140907_create_default_answer_title.rs  m20230908_140907_create_default_answer_titles.rs  m20231008_135425_create_user_table.rs  main.rs
server/presentation/: Cargo.toml
server/presentation/src/: api.rs  auth.rs  error_handler.rs  form_handler.rs  form_operation_notification.rs  form_schemas.rs  handlers.rs  health_check_handler.rs  lib.rs  message_handler.rs  message_schemas.rs  notification_handler.rs  schemas.rs  search_handler.rs  search_schemas.rs  user_handler.rs
server/types/: Cargo.toml
server/types/src/: lib.rs  natural_f32.rs  non_empty_string.rs  non_empty_vec.rs  ordered_unique_vec.rs
server/usecase/: Cargo.toml
server/usecase/src/: answer_submitter_restriction.rs  application_event.rs  create_form.rs  dto.rs  form.rs  forms.rs  global_discord_webhook.rs  health_check.rs  lib.rs  message.rs  models.rs  notification.rs  search.rs  test_utils.rs  user.rs  user_lookup.rs  user_reference_resolver.rs
(+356 files in other folders)
