[package]
name = "seichi-form-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
derive-getters = "0.2.0"
diesel = { version = "2.0.2", features = ["mysql"] }
dotenvy = "0.15.6"
reqwest = "0.11.13"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
typed-builder = "0.11.0"
