[package]
name = "seichi-form-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
derive-getters = "0.2.0"
dotenvy = "0.15.6"
reqwest = "0.11.13"
sea-orm = { version = "^0", features = [
    "sqlx-mysql",
    "runtime-actix-rustls",
    "macros",
], default-features = false }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
strum = "0.24.1"
strum_macros = "0.24.3"
typed-builder = "0.11.0"
migration = { path = "migration" }
