[workspace]
resolver = "2"
members = [
    "common",
    "domain",
    "entrypoint",
    "errors",
    "infra/resource",
    "migration",
    "presentation",
    "types",
    "usecase",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
tokio = { version = "1.51.0", features = ["full"] }
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
async-trait = "0.1.89"
sea-orm = { version = "1.1.20", features = ["sqlx-mysql", "runtime-actix-rustls", "macros"] }
tracing = "0.1.44"
mockall = "0.14.0"
envy = "0.4.2"
test-case = "3.3.1"
strum = "0.28.0"
strum_macros = "0.28.0"
proptest = "1.11.0"
proptest-derive = "0.8.0"
serde_json = "1.0.149"
itertools = "0.14.0"
chrono = { version = "0.4.44" }
futures = "0.3.32"
uuid = { version = "1.23.0", features = ["v4", "v7"] }
deriving_via = "2.2.0"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }
regex = "1.12.3"
redis = { version = "1.2.0", features = ["tokio-comp"] }
meilisearch-sdk = "0.32.0"
serenity = "0.12.5"
lapin = "4.4.0"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

