[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
errors = { path = "../errors" }
form = { path = "../form" }
migration = { path = "../migration" }
axum = "0.6.9"
tokio = { version = "1.26.0", features = ["full"] }
hyper = { version = "0.14.24", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
