[package]
name = "app"
version = "0.1.0"
edition = "2021"
default-run = "app"

[dependencies]
resource = { path = "../infra/resource" }
migration = { path = "../migration" }
presentation = { path = "../presentation" }
axum = { workspace = true }
tokio = { version = "1.26.0", features = ["full"] }
hyper = { version = "0.14.24", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }
serde = { workspace = true }
envy = { workspace = true }
once_cell = "1.17.1"
dotenvy = "0.15.6"
anyhow = "1.0.69"
tracing-subscriber = "0.3.16"
tracing = { workspace = true }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
