[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proptest = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
envy = { workspace = true }
