[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "^0", features = [
    "sqlx-mysql",
    "runtime-actix-rustls",
    "macros",
], default-features = false }
dotenvy = "0.15.6"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
