[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "^0", features = [
    "sqlx-mysql",
    "runtime-actix-rustls",
    "macros",
], default-features = false }
dotenvy = "0.15.6"
envy = "0.4.2"
once_cell = "1.17.1"
serde = { version = "1.0.152", features = ["derive"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
