[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
common = { path = "../common" }
derive-getters = "0.3.0"
deriving_via = { workspace = true }
errors = { path = "../errors" }
mockall = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = "0.25.3"
typed-builder = "0.18.0"
types = { path = "../types" }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true, features = ["arbitrary"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
serde_json = { workspace = true }
test-case = { workspace = true }
types = { path = "../types", features = ["arbitrary"] }
