[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
derive-getters = "0.5.0"
deriving_via = { workspace = true }
errors = { path = "../errors" }
mockall = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
types = { path = "../types" }
uuid = { workspace = true }
regex = { workspace = true }
serenity = { workspace = true }

[dev-dependencies]
chrono = { workspace = true, features = ["arbitrary"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
serde_json = { workspace = true }
test-case = { workspace = true }
types = { path = "../types", features = ["arbitrary"] }
common = { path = "../common" }
