[package]
name = "entrypoint"
version = "0.1.0"
edition = "2021"
default-run = "entrypoint"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
common = { path = "../common" }
hyper = { version = "1.0.1", features = ["full"] }
migration = { path = "../migration" }
presentation = { path = "../presentation" }
resource = { path = "../infra/resource" }
# default featureは推移的にnative-tls featureを有効しているため、native-tls (LinuxではOpenSSL) を連れてくる。これをオプトアウトするためにrustlsを使う。
sentry = { version = "0.31.8", default-features = false, features = ["backtrace", "contexts", "panic", "anyhow", "reqwest", "tracing", "debug-images", "rustls", "tower", "tower-http"] }
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["std", "registry", "env-filter"] }

[package.metadata.cargo-udeps.ignore]
development = ["cargo-husky"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
