[package]
name = "errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
sea-orm = "0.11.0"
serde = { version = "1.0.152", features = ["derive"] }
strum_macros = "0.24.3"
thiserror = "1.0.38"
tracing = "0.1.37"
