[package]
name = "errors"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { workspace = true }
strum = { workspace = true }
thiserror = "=2.0.12"
uuid = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
meilisearch-sdk = { workspace = true }
serde_json = { workspace = true }
serenity = { workspace = true }
lapin = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
