[package]
name = "form"
version = "0.1.0"
edition = "2021"

[dependencies]
errors = { path = "../errors" }
database = { path = "../database" }
sea-orm = { version = "0.11.0", features = [
    "sqlx-mysql",
    "runtime-actix-rustls",
    "macros",
], default-features = false }
derive-getters = "0.2.0"
typed-builder = "0.12.0"
axum = "0.6.8"
tokio = { version = "1.23.0", features = ["full"] }
hyper = { version = "0.14.24", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors"] }
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
strum_macros = "0.24.3"
thiserror = "1.0.38"
anyhow = "1.0.69"
tracing = "0.1.37"
itertools = "0.10.5"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
