[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1.13.0", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "^1.1.6"
features = [
    # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
    # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
    # e.g.
    # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
    # "sqlx-postgres",         # `DATABASE_DRIVER` feature
]

[package.metadata.cargo-udeps.ignore]
normal = ["entities"]
development = ["cargo-husky"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
