[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1.13.2", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "^1.1.20"
features = [
    "runtime-tokio-rustls",
    "sqlx-mysql",
]

[package.metadata.cargo-udeps.ignore]
normal = ["entities"]
development = ["cargo-husky"]

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
