[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }

[package.metadata.cargo-udeps.ignore]
normal = ["entities"]
development = ["cargo-husky"]

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
