[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
common = { path = "../common" }
domain = { path = "../domain" }
errors = { path = "../errors" }
resource = { path = "../infra/resource" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
usecase = { path = "../usecase" }
uuid = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
