[package]
name = "presentation"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
common = { path = "../common" }
domain = { path = "../domain" }
errors = { path = "../errors" }
resource = { path = "../infra/resource" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
usecase = { path = "../usecase" }
types = { path = "../types" }
uuid = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
tokio = { workspace = true }
