[package]
name = "types"
version = "0.1.0"
edition = "2021"

[features]
default = []
arbitrary = ["proptest", "proptest-derive"]

[dependencies]
deriving_via = { workspace = true }
serde = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
