[package]
name = "types"
version = "0.1.0"
edition = "2021"

[features]
default = []
arbitrary = ["proptest", "proptest-derive", "common"]

[dependencies]
deriving_via = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
serde = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
common = { path = "../common", optional = true }
