[package]
name = "usecase"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
resource = { path = "../infra/resource" }
errors = { path = "../errors" }
types = { path = "../types" }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
