[package]
name = "usecase"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
resource = { path = "../infra/resource" }
errors = { path = "../errors" }
types = { path = "../types" }
uuid = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
common = { path = "../common" }
async-trait = { workspace = true }
