[package]
name = "outgoing"
version = "0.1.0"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../../domain" }
errors = { path = "../../errors" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
envy = { workspace = true }
serenity = { workspace = true }
mockall = { workspace = true }
