[package]
name = "resource"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../../domain" }
entities =  { path = "../entities" }
migration = { path = "../../migration" }
sea-orm = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
mockall = { workspace = true }
envy = { workspace = true }
dotenvy = { workspace = true }
once_cell = { workspace = true }
