[package]
name = "resource"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../../domain" }
entities =  { path = "../entities" }
migration = { path = "../../migration" }
errors = { path = "../../errors" }
outgoing = { path = "../outgoing" }
sea-orm = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
mockall = { workspace = true }
envy = { workspace = true }
once_cell = { workspace = true }
itertools = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
