[package]
name = "resource"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
domain = { path = "../../domain" }
envy = { workspace = true }
errors = { path = "../../errors" }
futures = { workspace = true }
itertools = { workspace = true }
migration = { path = "../../migration" }
mockall = { workspace = true }
once_cell = { workspace = true }
outgoing = { path = "../outgoing" }
sea-orm = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
num-traits = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
types = { path = "../../types" }
redis = { workspace = true }
sha256 = "1.5.0"
common = { path = "../../common" }
reqwest = { workspace = true }
serde_json = { workspace = true }
